--- a/app/views/refinery/pages/home.html.slim
+++ b/app/views/refinery/pages/home.html.slim
@@ -13,4 +13,4 @@
 
 .row
   .col-md-12.col-sm-12.text-center.lead
-    / = link_to 'ENTER', refinery.posts_posts_path
+    = link_to 'ENTER', refinery.posts_posts_path
