--- a/app/views/refinery/_header.html.slim
+++ b/app/views/refinery/_header.html.slim
@@ -10,4 +10,4 @@ nav.navbar.navbar-light.bg-faded
         = navigation_tag('NEWS', refinery.posts_posts_path)
         = navigation_tag('WORKS', refinery.works_works_path)
         = navigation_tag('BIOGRAPHY', refinery.biographies_biographies_path)
-        / = navigation_tag('CONTACT', refinery.new_contacts_contacts_path)
+        = navigation_tag('CONTACT', refinery.new_contacts_contacts_path)
