--- a/app/views/refinery/_footer.html.slim
+++ b/app/views/refinery/_footer.html.slim
@@ -11,7 +11,7 @@
           = navigation_tag('NEWS', refinery.posts_posts_path)
           = navigation_tag('WORKS', refinery.works_works_path)
           = navigation_tag('BIOGRAPHY', refinery.biographies_biographies_path)
-          / = navigation_tag('CONTACT', refinery.new_contacts_contacts_path)
+          = navigation_tag('CONTACT', refinery.new_contacts_contacts_path)
   .container
     .row
       .col-md-12.col-sm-12
